<resources>
    <string name="app_name">TFGapp</string>
    <string name="ibbackarrow">ibBackArrow</string>
    <string name="shopping_lists">Listas de la compra</string>
    <string name="photo">Foto</string>
    <string name="o">o</string>
    <string name="icon">Icono</string>
    <string name="_1_month">1 mes</string>
    <string name="_1_week">1 semana</string>
    <string name="_3_months">3 meses</string>
    <string name="_2_weeks">2 semanas</string>
    <string name="expire_in">Caduca en:</string>
    <string name="name">Nombre</string>
    <string name="ibsettingscategory">ibSettingsCategory</string>
    <string name="ivcategoryicon">ivCategoryIcon</string>
    <string name="edit_category">Editar categoria</string>
    <string name="update_category">Actualizar categoria</string>
    <string name="ibaddproducttolistdialogchangecategory">ibAddProductToListDialogChangeCategory</string>
    <string name="save_changes">Guardar cambios</string>
    <string name="ibdeletecategory">ibDeleteCategory</string>
    <string name="rename_list">Renombrar lista</string>
    <string name="list_name">Nombre de la lista</string>
    <string name="empty_list">Vaciar Lista</string>
    <string name="delete_list">Eliminar Lista</string>
    <string name="new_category">Nueva categoria</string>
    <string name="create_category">Crear categoria</string>
    <string name="new_shopping_list">Nueva lista de la compra</string>
    <string name="create_list">Crear lista</string>
    <string name="scan_qr">Escanear QR</string>
    <string name="add_manual">Añadir manualmente</string>
    <string name="order_by">Ordenar por</string>
    <string name="product_image">Product Image</string>
    <string name="external">Externa</string>
    <string name="local">Local</string>
    <string name="search">Búsqueda</string>
    <string name="add_products">Añadir productos</string>
    <string name="select_an_icon">Selecciona un icono</string>
    <string name="ibboughtproduct">ibBoughtProduct</string>
    <string name="ivproducticon">ivProductIcon</string>
    <string name="ibaddproducttolist">ibAddProductToList</string>
    <string name="delete_product">Delete product</string>
    <string name="expiration_date">Expiration Date</string>
    <string name="product_name">Product Name</string>
    <string name="products_bought">Productos comprados:</string>
    <string name="keyboard_bar">/</string>
    <string name="list_created_correctly">Lista creada correctamente!</string>
    <string name="fill_the_name">Rellena el nombre correctamente</string>
    <string name="category_created_correctly">Categoría creada correctamente!</string>
    <string name="deleted_list_correctly">Lista eliminada correctamente</string>
    <string name="renamed_list_correctly">Lista renombrada correctamente</string>
    <string name="empty_list_correctly">Lista vaciada correctamente</string>
    <string name="renamed_category_correctly">Categoría renombrada correctamente</string>
    <string name="category_deleted_correctly">Categoría eliminada correctamente</string>
    <string name="not_products_found">No se encontraron productos</string>
    <string name="error_obtaining_data">Error al obtener datos</string>
    <string name="error_with_search">Error en la búsqueda</string>
    <string name="add_to_list">Añadir a la lista</string>
    <string name="category_suggested">Categoria sugerida</string>
    <string name="doestn_exist_any_shopping_list">No existe ninguna lista de la compra</string>
    <string name="scan_barcode">Escanear codigo de barras</string>
    <string name="bar_code">Código de barras</string>
    <string name="expire_data">Fecha de caducidad</string>
    <string name="serving_size">Tamaño de la porción</string>
    <string name="info">Información</string>
    <string name="_100_g_100_ml">100 g / 100 ml</string>
    <string name="empty_expire_data">__ / __ / __</string>
    <string name="category">Categoria</string>
    <string name="product_details">Detalles del producto</string>
    <string name="calories">Calorias</string>
    <string name="general_name">Denominación general</string>
    <string name="cuantity">Cantidad</string>
    <string name="brands">Marcas</string>
    <string name="nutritional_information">Informacion Nutricional</string>
    <string name="energy">Energía</string>
    <string name="fats">Grasas</string>
    <string name="saturated_fats">Grasas Saturadas</string>
    <string name="carbohydrates">Carbohidratos</string>
    <string name="salt">Sal</string>
    <string name="proteins">Proteinas</string>
    <string name="ingredients">Ingredientes</string>
    <string name="aditional_content_for_nutrients_levels">Contenido adicional para Niveles nutrientes</string>
    <string name="change_category">Cambiar categoria</string>
    <string name="product_nae">Nombre del producto</string>
    <string name="product_name_es">Nombre del producto</string>
    <string name="efaddstockitem">efAddStockItem</string>
    <string name="ivaddphoto">ivAddPhoto</string>
    <string name="ivaddicon">ivAddIcon</string>
    <string name="efaddstockitem_">efAddStockItem</string>
    <string name="ibsettings">ibSettings</string>
    <string name="category_name">Nombre categoria</string>
    <string name="ya_consum_o_tir_el_producto">Ya consumí o tiré el producto</string>
    <string name="eliminar_el_producto_directamente">Eliminar el producto directamente</string>
    <string name="a_adirlo_a_lista_de_compra">Añadirlo a lista de compra</string>
    <string name="nombre_categoria">Nombre categoria</string>
    <string name="a_n_no_has_a_adido_ning_n_producto">¡Aún no has añadido ningún producto!</string>
    <string name="pulsa_el_bot_n_para_a_adir_uno">Pulsa el botón para añadir uno</string>

    <!--CONTENT DESCRIPTIONS-->


    <string-array name="order_by_options_stock_products">
        <item>Nombre</item>
        <item>Fecha de caducidad</item>
        <item>Ultimos añadidos</item>
    </string-array>
</resources>