<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.mystockproductscan.MyStockProductDetailFragment">

    <com.google.android.material.imageview.ShapeableImageView
        android:id="@+id/ivProductApiSearchImage"
        android:layout_width="match_parent"
        android:layout_height="320dp"
        android:contentDescription="@string/product_image"
        android:scaleType="centerCrop"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:src="@drawable/fotopruebaagua" />

    <TextView
        android:id="@+id/tvProductId"
        style="@style/ProductsListTextStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:gravity="center_horizontal"
        tools:text="Prueba item name"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ivProductApiSearchImage" />

    <com.google.android.material.divider.MaterialDivider
        android:id="@+id/divider"
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:layout_marginVertical="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvProductId" />

    <LinearLayout
        android:id="@+id/llExpireData"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/divider">

        <TextView
            android:id="@+id/tvExpireDataTitle"
            style="@style/StockProductTitles"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_margin="16dp"
            android:text="@string/expire_data" />

        <androidx.cardview.widget.CardView
            android:id="@+id/cvChangeExpireData"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_gravity="center_vertical"
            android:layout_margin="20dp"
            android:outlineSpotShadowColor="@color/transparent"
            app:cardBackgroundColor="@color/primaryGrey"
            app:cardCornerRadius="5dp">

            <TextView
                android:id="@+id/tvChangeExpireData"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginHorizontal="16dp"
                android:layout_marginStart="8dp"
                android:ellipsize="end"
                android:fontFamily="@font/roboto_light"
                android:gravity="center_horizontal"
                android:maxLines="1"
                android:text="@string/empty_expire_data"
                android:textColor="@color/black"
                android:textSize="20sp"
                app:layout_constraintHorizontal_bias="0"
                app:layout_constraintWidth_default="wrap"
                app:layout_constraintWidth_max="100dp"
                app:layout_constraintWidth_min="0dp" />
        </androidx.cardview.widget.CardView>


    </LinearLayout>

    <GridLayout
        android:id="@+id/glExpireData"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginVertical="8dp"
        android:layout_marginHorizontal="16dp"
        android:columnCount="2"
        android:rowCount="2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/llExpireData">

        <Button
            android:id="@+id/btn1Week"
            style="@style/SmallButtonTextStyle"
            android:layout_width="0dp"
            android:layout_height="35dp"
            android:layout_margin="4dp"
            android:layout_columnWeight="1"
            android:layout_rowWeight="1"
            android:backgroundTint="@color/primaryGrey"
            android:textColor="@color/black"
            android:text="@string/_1_week"
            android:textSize="16sp"
            android:paddingTop="1dp"
            android:paddingBottom="1dp"
            android:paddingHorizontal="0dp"
            android:includeFontPadding="false" />

        <Button
            android:id="@+id/btn2Weeks"
            style="@style/SmallButtonTextStyle"
            android:layout_width="0dp"
            android:layout_height="35dp"
            android:layout_margin="4dp"
            android:layout_columnWeight="1"
            android:layout_rowWeight="1"
            android:backgroundTint="@color/primaryGrey"
            android:textColor="@color/black"
            android:text="@string/_2_weeks"
            android:textSize="16sp"
            android:paddingTop="1dp"
            android:paddingBottom="1dp"
            android:paddingHorizontal="0dp"
            android:includeFontPadding="false" />

        <Button
            android:id="@+id/btn1Month"
            style="@style/SmallButtonTextStyle"
            android:layout_width="0dp"
            android:layout_height="35dp"
            android:layout_margin="4dp"
            android:layout_columnWeight="1"
            android:layout_rowWeight="1"
            android:backgroundTint="@color/primaryGrey"
            android:textColor="@color/black"
            android:text="@string/_1_month"
            android:textSize="16sp"
            android:paddingTop="1dp"
            android:paddingBottom="1dp"
            android:paddingHorizontal="0dp"
            android:includeFontPadding="false" />

        <Button
            android:id="@+id/btn2Months"
            style="@style/SmallButtonTextStyle"
            android:layout_width="0dp"
            android:layout_height="35dp"
            android:layout_margin="4dp"
            android:layout_columnWeight="1"
            android:layout_rowWeight="1"
            android:backgroundTint="@color/primaryGrey"
            android:textColor="@color/black"
            android:text="@string/_3_months"
            android:textSize="16sp"
            android:paddingTop="1dp"
            android:paddingBottom="1dp"
            android:paddingHorizontal="0dp"
            android:includeFontPadding="false" />
    </GridLayout>

    <com.google.android.material.divider.MaterialDivider
        android:id="@+id/divider2"
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:layout_marginVertical="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/glExpireData" />

    <LinearLayout
        android:id="@+id/llCategorySuggested"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/divider2">

        <TextView
            android:id="@+id/tvSuggestedCategory"
            style="@style/StockProductTitles"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_marginVertical="16dp"
            android:layout_marginStart="16dp"
            android:text="@string/category_suggested" />

        <androidx.cardview.widget.CardView
            android:id="@+id/cvCategory"
            android:layout_width="160dp"
            android:layout_height="44dp"
            android:layout_gravity="center_vertical"
            app:cardBackgroundColor="@color/accentRed"
            app:cardCornerRadius="16dp">

            <LinearLayout
                android:id="@+id/llContentContainer"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:gravity="start|center_vertical"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/ivCategoryIcon"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:layout_marginStart="4dp"
                    android:contentDescription="@string/ivcategoryicon"
                    tools:src="@drawable/ic_panaderia" />


                <TextView
                    android:id="@+id/tvCategoryName"
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginStart="8dp"
                    android:ellipsize="end"
                    android:fontFamily="@font/roboto_medium"
                    android:maxLines="1"
                    android:textColor="@color/white"
                    android:textSize="14sp"
                    app:layout_constraintHorizontal_bias="0"
                    app:layout_constraintWidth_default="wrap"
                    app:layout_constraintWidth_max="100dp"
                    app:layout_constraintWidth_min="0dp"
                    tools:text="Categoryaaaaaaa" />

                <Space
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1" />

            </LinearLayout>

        </androidx.cardview.widget.CardView>

    </LinearLayout>

    <TextView
        android:id="@+id/tvChangeCategory"
        style="@style/CustomDialogStyle"
        android:textColor="@color/primaryDark"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:text="@string/change_category"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/llCategorySuggested" />


    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rvCategories"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginVertical="16dp"
        android:layout_marginStart="12dp"
        android:scrollbars="none"
        android:visibility="invisible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/divider2" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/efAddStockItem"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="32dp"
        android:backgroundTint="@color/accentRed"
        android:src="@drawable/ic_add"
        app:backgroundTint="@color/accentRed"
        app:fabSize="normal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:shapeAppearanceOverlay="@style/RoundedExtendedFab"
        app:tint="@color/white"
        android:contentDescription="@string/efaddstockitem_" />

    <ImageButton
        android:id="@+id/ibBackArrow"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_gravity="center_vertical"
        android:layout_marginEnd="16dp"
        android:background="@android:color/transparent"
        android:contentDescription="@string/ibbackarrow"
        android:src="@drawable/ic_back_arrow_big"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:tint="@color/white" />

</androidx.constraintlayout.widget.ConstraintLayout>
