<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="400dp"
    android:layout_height="wrap_content"
    android:background="@drawable/shape_border_radius"
    android:padding="16dp"
    android:visibility="visible">

    <TextView
        android:id="@+id/tvTitleDialogNewCategory"
        style="@style/TitleToolbarDark"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginVertical="8dp"
        android:text="@string/new_category"
        app:layout_constraintBottom_toTopOf="@id/llNewCategoryName"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/llNewCategoryName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvTitleDialogNewCategory">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tilUpdateNameCategory"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="270dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="2dp"
            android:layout_gravity="center_vertical"
            android:hint="Nombre categoria"
            app:boxCornerRadiusBottomEnd="16dp"
            app:boxCornerRadiusBottomStart="16dp"
            app:boxCornerRadiusTopEnd="16dp"
            app:boxCornerRadiusTopStart="16dp"
            app:boxStrokeColor="@color/accentRed"
            app:hintTextColor="@color/accentRed">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etUpdateNameCategory"
                style="@style/TextInputEditTextStyle"
                android:textSize="16dp"
                android:layout_gravity="center_vertical"
                android:layout_width="270dp"
                android:layout_height="wrap_content"
                android:inputType="text"
                android:padding="16dp" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.imageview.ShapeableImageView
            android:id="@+id/ivAddIcon"
            android:layout_width="55dp"
            android:layout_height="55dp"
            android:layout_marginStart="32dp"
            android:layout_gravity="center_vertical"
            android:background="@color/white"
            android:contentDescription="@string/product_image"
            android:src="@drawable/ic_nuevacategoria1"
            app:shapeAppearanceOverlay="@style/image_rounded" />

    </LinearLayout>


    <!--
        <ImageView
            android:id="@+id/ivAddIcon"
            android:layout_width="100dp"
            android:layout_marginVertical="16dp"
            android:padding="16dp"
            android:layout_height="100dp"
            android:background="@color/white"
            android:src="@drawable/ic_icon"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvSelectIcon" />-->


    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/llNewCategoryName"
        android:layout_marginTop="16dp">

        <ImageButton
            android:id="@+id/ibDeleteCategory"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:background="@android:color/transparent"
            android:scaleType="fitCenter"
            android:src="@drawable/ic_delete"
            app:tint="@color/accentRed"
            android:layout_gravity="center_vertical"
            android:contentDescription="@string/ibdeletecategory" />
        <Space
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1" />

        <Button
            android:id="@+id/btnSaveChangesCategory"
            style="@style/SmallButtonTextStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/accentRed"
            android:text="@string/save_changes"
            android:layout_gravity="center_vertical"
            />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
